--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -199,6 +199,38 @@ Emulate the OUTeX intertext command using the (built-in) enumitem command.
     \end{itemize}
 \end{enumerate}
 
+\question{4}
+\begin{enumerate}
+  \item The \verb|\tutoronly| command \emph{only} produces output in the tutor version of the tutor notes, 
+    and is ignored when the \verb|specsolns| option is used. For example
+    \tutoronly{ {\color{blue} students will not see this!}}.
+  \item The \verb|tutor| environment is only visible in tutor notes, 
+    and is ignored when the \verb|specsolns| option is used. For example
+
+    \begin{tutor}
+      \color{blue}
+      This environment will only be seen in the tutor notes.
+
+      It will not be seen in the student version.
+    \end{tutor}
+    \tutoronly{\pagebreak}
+  \item The \verb|\studentonly| command \emph{only} produces output in the 
+    special solutions version of tutor notes (so \verb|specsolns| must be active); for example .\studentonly{ {\color{red} this is only output in student solutions}}
+  \item The \verb|student| environment is only visible in student solutions, 
+    \studentonly{\pagebreak}
+    when the \verb|specsolns| option is used. For example
+
+    \begin{student}
+      \color{red}
+      This environment will only be seen in the student solutions.
+
+      It will not be seen in the tutor notes.
+    \end{student}
+  \item The \verb|\tutororstudent| takes two parameters, the first will only be seen in the tutor version (when \verb|specsolns|
+    is not active), the second will only be seen by students in the student version (when \verb|specsolns| is active).
+    For example: \tutororstudent{for tutors!}{for students!}
+\end{enumerate}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \cma*{41}[Covers Units C and D]
 
