--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -15,8 +15,8 @@
 \tntitle{Title of TN}
 \tnyear{2015B}
 \copyrightyear{2012} % If different from \abyear
-\tutoronlytitle{This title is for tutors only\par}
-\studentonlytitle{This title is for students only\par}
+%\tutoronlytitle{Title for tutor-only environment\par}      % specifies title for 'Tutor-only' environment
+%\studentonlytitle{Title for student-only environment\par}  % specifies title for 'Student-only' environment
 %\specsolnscolor{blue} % can be used to change text colour in specsolns mode
 %\optiontext{} %Can be used to change text appearing at top of multi-choice options.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
