iCMA v1.1: \answerbox parameters
Added optional parameter to \answerbox and \wideanswerbox to specify
several boxes side-by-side.

--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -130,20 +130,20 @@ Choose an inline option at 1.5 spacing.
 \end{inlineoptions}
 
 \question
-You can have non-inline options too:
+Answer boxes accept an optional parameter to put several side-by-side:
 \begin{options}
 \item There are no options
 \item There is one option
-\item This option is the wrong choice\answerbox
+\item This option is the wrong choice\answerbox[4]
 \end{options}
 
 
 \question
-You can have non-inline options too:
+The optional parameter works for wide answer boxes too:
 \begin{options}
 \item There are no options
 \item There is one option
-\item This option is the wrong choice\answerbox
+\item This option is the wrong choice\wideanswerbox[2]
 \end{options}
 
 blah blah 
