--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -87,6 +87,10 @@
 You can place longer remarks inside the longremark environment.
 \end{longremark}
 
+\begin{references}
+You can place references inside the references environment.
+\end{references}
+
 \question*\label{myqnnum-a}
 % Put your solution inside the solution environment
 % if you want to try using the studenttex option.
