--- a/Documentation/ou-supps.tex
+++ b/Documentation/ou-supps.tex
@@ -643,6 +643,12 @@ Provides a command and environment in which to write text that is visible only i
 \emph{Warning: Do not use the |longremark| environment inside the |solutions| environment! In certain modes this will cause errors relating to verbatim mode.}
 
 \begin{desc}
+|\begin{references}<text>\end{references}|  
+\end{desc}
+
+Provides an environment for references; it typesets the word `References' in italics on its own line, with the |<text>| in normal font.
+
+\begin{desc}
 |\tutoronly{<commands/text>}|
 \end{desc}
 Commands, text, and anything else (e.g |\pagebreak|) passed to the |\tutoronly| command will only
