Implementation of metadataset which accepts key=value pairs to set meta data for the document

--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -27,6 +27,21 @@
 Module-specific instructions for the front page.
 }% ends \abinstructions
 
+%% alternative way of updating the above information
+%\metadataset{faculty=STEM, 
+%            module code=MST142,
+%            module title=Title of Module,
+%            document title=AB title,
+%            document subtitle=AB subtitle,
+%            presentation=2017B,
+%            copy right year=1999,
+%            supp no=3.14159,
+%            version no=1.12,
+%            multiple choice option text=choices,
+%            no cut off date,
+%            instructions=some specific instructions,
+%            }
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \maketitle
