--- a/icmatemplate.tex
+++ b/icmatemplate.tex
@@ -49,6 +49,19 @@ this should be interpreted as `box in margin'.
 }% ends \examinstructions
 
 % \declaration{} Optional: you can use this to write your own declaration page.
+%% alternative way of updating the above information
+%\metadataset{faculty=STEM, 
+%            module code=MST142,
+%            module title=Title of Module,
+%            presentation=2017B,
+%            document title=iCMA title,
+%            supp no=3.14159,
+%            cut off date=27th Oct,
+%            covers material in={Units 1, 2 and 3},
+%            multiple choice option text=choices,
+%            %instructions=some specific instructions,
+%            %declaration=your own declaration here,
+%            }
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 \pagenumbering{arabic}
