--- a/examtemplate.tex
+++ b/examtemplate.tex
@@ -101,6 +101,12 @@ The enumitem package allows numbering to be resumed later, to replace the OUTeX 
 \item Sub-sub\mk 2
 \item Sub-sub that is sufficiently long that it runs over more than one line.\mk 2
 \end{enumerate}
+\item Starred enumerate environment gives you inline enumerate:
+\begin{enumerate*}
+\item first part
+\item second part
+\item third part\mk{3}
+\end{enumerate*}
 \end{enumerate}
 
 \section{Multiple choice questions}
