--- a/abtemplate.tex
+++ b/abtemplate.tex
@@ -116,6 +116,12 @@ Preamble text, if desired.
 Emulate the OUTeX intertext command using the (built-in) enumitem command.
 \begin{enumerate}[resume]
 \item Numbering continues
+\item Starred enumerate environment gives you inline enumerate:
+\begin{enumerate*}
+\item first part
+\item second part
+\item third part\mk{3}
+\end{enumerate*}
 \end{enumerate}
 
 
