--- a/tntemplate.tex
+++ b/tntemplate.tex
@@ -117,6 +117,13 @@ You can place references inside the references environment.
 
 \item Marks with marginal comments. \marks[Method. Ignore all attempts at this question.]{40}
 
+\item Starred enumerate environment gives you inline enumerate:
+\begin{enumerate*}
+\item first part
+\item second part
+\item third part\mk{3}
+\end{enumerate*}
+
 \item The final part.\marks{3}
 
 \subtotal[for part~\theenumi]{1}
@@ -225,11 +232,11 @@ Emulate the OUTeX intertext command using the (built-in) enumitem command.
     \ourule
       \item \verb!\ourule[color=orange]!
     \ourule[color=orange]
-      \item \verb1\ourule[color=black!50!red,height=3pt,moveleft=4cm,width=.5\textwidth]1
-    \ourule[color=black!50!red,height=3pt,moveleft=-4cm,width=.5\textwidth]
-  \item You can specify the style of the \verb!\ourule! command globally using, for example, \verb!\setOUrule[color=red,height=4pt,moveleft=-2cm,width=.75\textwidth]!
+      \item \verb1\ourule[color=black!50!red,height=3pt,width=.5\textwidth]1
+    \ourule[color=black!50!red,height=3pt,width=.5\textwidth]
+  \item You can specify the style of the \verb!\ourule! command globally using, for example, \verb!\setOUrule[color=red,moveleft=-2cm,width=.75\textwidth]!
 
-\setOUrule[color=red,height=4pt,moveleft=-2cm,width=.75\textwidth]
+\setOUrule[color=red,moveleft=-2cm,width=.75\textwidth]
 
 Now, when using simply \verb!\ourule!, the output is:
 
