PDF metadata, per issue #29
Uses \pdfinfo to create Author and Title metadata for LTI. Will only be
effective if using PDFLaTeX.

WARNING: May be buggy if hyperref gets loaded.

--- a/ouab.cls
+++ b/ouab.cls
@@ -101,6 +101,11 @@
 \textbf{\@versionno} }%
 }
 \renewcommand{\maketitle}{
+%% First, set up PDF metadata
+ \pdfinfo{
+   /Author (The Open University)
+   /Title  (\@modulecode\ \@abtitle\ \@abyear)
+}
   \thispagestyle{frontpage}
   %\vspace{2cm}
 \begin{adjustwidth}{0cm}{-4cm}
